--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,23 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-dependencies:
+dependencies: 
+  
   flutter:
     sdk: flutter
+  carousel_slider: ^4.2.1
+  convex_bottom_bar: ^3.2.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flex_color_scheme: ^7.0.5
+  flutter_rating_bar: ^4.0.1
+  graphic: ^2.2.0
+  pie_chart: ^5.3.2
+  sliding_switch: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +71,14 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - images/book1.jpg
+    - images/book2.jpg
+    - images/book3.jpeg
+    - images/book4.jpg
+    - images/book5.jpg
+    - images/book.png
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
